Fix size of grid so it no longer overlaps footer

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ input:focus{outline:none !important}
  
 input {
      border-radius: 30px;
-     border: 2px solid white;
+     border: 1px solid white;
      background-color: rgba(255,255,255,0.2);
      padding: 10px 10px;
      text-align: left;
@@ -92,7 +92,7 @@ button {
     padding: 10px 20px;
     border-radius: 30px;
     background-color: rgba(255,255,255,0.2);
-    border: 2px white solid;
+    border: 1px white solid;
     color: white;
     font-size: 14pt;
     font-weight: normal;
@@ -111,7 +111,7 @@ button:hover {
 #gameboard {
     margin: auto;
     display: grid;
-    width: 600px;
+    width: 550px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     cursor: pointer;
@@ -120,8 +120,8 @@ button:hover {
 
 .square {
     box-sizing: border-box;
-    height: 200px;
-    width: 200px;
+    height: 183px;
+    width: 183px;
     display: flex;
     justify-content: center;
     align-items: center;
